  * Added a new option in show desktop plugin that skips the fade
    animation: useful when performance is more important than eyecandy.

  [ Marco Trevisan (Treviño) ]
  * debian: add unity-lowgfx profile to compizconfig (LP: #1598770)
  * Composite: use C++ goodness for managing damaging rectangles
  * ccsGSettingsBackend: don't try to update setting if wrapper is not
    found (LP: #1599900)

 -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Tue, 05 Jul 2016 12:29:58 +0200

compiz (1:0.9.12.2+16.04.20160526-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * Add an option to notify that a key press is actually an "auto
    repeat" one. (LP: #1572241)

  [ Alberts Muktupāvels ]
  * OpenGL: use the number of Opaque windows around to decide whether
    paint the bg or not (LP: #1574866)

  [ Marco Trevisan (Treviño) ]
  * Scale: use the selectedWindow as starting point when focusing a
    window (LP: #1575168)
  * Scale: allow to iterate through windows using Tab key
  * Window: call stateChangeNotify when compiz state changed but before
    changing the WM state (LP: #1521302)

  [ Eleni Maria Stea ]
  * Expo, Scale: add support for bottom offsets (LP: #1562346, LP:
    #1573897)

  [ handsome_feng ]
  * Add a YBottomOffset value when stretch maximized windows。 (LP:
    #1562348)

  [ CI Train Bot ]
  * No-change rebuild.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Thu, 26 May 2016 00:12:16 +0000

compiz (1:0.9.12.2+16.04.20160415-0ubuntu1) xenial; urgency=medium

  [ Martin Wimpress ]
  * mate.ini: Fixes flickery thumbnails

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 15 Apr 2016 05:30:50 +0000

compiz (1:0.9.12.2+16.04.20160331-0ubuntu1) xenial; urgency=medium

  [ Alberts Muktupāvels ]
  * gtk-window-decorator: fix typos in tests.

  [ Martin Wimpress ]
  * Fix compiz-mate Recommends: use ubuntu-mate-wallpapers-common.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Thu, 31 Mar 2016 22:55:09 +0000
