@@ -11,6 +11,8 @@ compiz (1:0.9.12.2+16.04.20160526-0ubuntu2) UNRELEASED; urgency=medium
   * Composite: use C++ goodness for managing damaging rectangles
   * ccsGSettingsBackend: don't try to update setting if wrapper is not
     found (LP: #1599900)
+  * migration scripts: remove unsupported plugins for all the unity
+    profiles
 
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Tue, 05 Jul 2016 12:29:58 +0200
 
